--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "make-chat",
+  "name": "quiz-websockets",
   "version": "1.0.0",
-  "description": "",
+  "description": "Real-time multiplayer quiz battle game using WebSockets",
   "license": "ISC",
   "author": "",
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
-    "mongoose": "^8.18.2",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
